WIP: Trying to integrate IKE Spinedarray database