@@ -14,6 +14,12 @@
     <name>aperture</name>
     <description>Demo project for Spring Boot</description>
     <properties>
+        <!-- IKE Properties -->
+        <tinkar-core.groupId>dev.ikm.tinkar</tinkar-core.groupId>
+        <tinkar-core.version>1.127.2-SNAPSHOT</tinkar-core.version>
+        <tinkar-jpms-deps.groupId>dev.ikm.jpms</tinkar-jpms-deps.groupId>
+        <eclipse-collections-api.version>12.0.0.M3-r3</eclipse-collections-api.version>
+
         <!-- Apache Jena -->
         <jena-core.version>6.1.0</jena-core.version>
         <java.version>25</java.version>
@@ -21,10 +27,45 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Apache Jena -->
             <dependency>
                 <groupId>org.apache.jena</groupId>
                 <artifactId>jena-core</artifactId>
                 <version>${jena-core.version}</version>
+            </dependency>
+
+            <!-- IKE Dependencies -->
+            <dependency>
+                <groupId>${tinkar-core.groupId}</groupId>
+                <artifactId>data-spinedarray-provider</artifactId>
+                <version>${tinkar-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${tinkar-core.groupId}</groupId>
+                <artifactId>entity-provider</artifactId>
+                <version>${tinkar-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${tinkar-core.groupId}</groupId>
+                <artifactId>executor-provider</artifactId>
+                <version>${tinkar-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${tinkar-core.groupId}</groupId>
+                <artifactId>search-provider</artifactId>
+                <version>${tinkar-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${tinkar-core.groupId}</groupId>
+                <artifactId>terms</artifactId>
+                <version>${tinkar-core.version}</version>
+            </dependency>
+
+            <!-- JPMS Libraries -->
+            <dependency>
+                <groupId>${tinkar-jpms-deps.groupId}</groupId>
+                <artifactId>eclipse-collections-api</artifactId>
+                <version>${eclipse-collections-api.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -42,8 +83,34 @@
         </dependency>
 
         <!-- IKE Dependencies -->
+        <dependency>
+            <groupId>${tinkar-core.groupId}</groupId>
+            <artifactId>data-spinedarray-provider</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${tinkar-core.groupId}</groupId>
+            <artifactId>entity-provider</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${tinkar-core.groupId}</groupId>
+            <artifactId>executor-provider</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${tinkar-core.groupId}</groupId>
+            <artifactId>search-provider</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${tinkar-core.groupId}</groupId>
+            <artifactId>terms</artifactId>
+        </dependency>
 
-        <!-- Solor Dependencies -->
+        <!-- JPMS Libraries -->
+        <dependency>
+            <groupId>${tinkar-jpms-deps.groupId}</groupId>
+            <artifactId>eclipse-collections-api</artifactId>
+        </dependency>
+
+        <!-- Jena Dependencies -->
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-core</artifactId>
@@ -62,14 +129,26 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <jvmArguments>--enable-preview</jvmArguments>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                    <argLine>-XX:+EnableDynamicAgentLoading -Xshare:off --enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
